[260205] update uni, legal url

--- a/index.html
+++ b/index.html
@@ -1488,6 +1488,14 @@
             <a onclick="navigateTo('archive')">자료실</a>
           </div>
         </div>
+
+        <div class="nav-item">
+          <span><a href="https://lawi-sookmyung.github.io/legal-clinic/" target="_blank" style="color: inherit; text-decoration: none;">리걸클리닉</a></span>
+        </div>
+
+        <div class="nav-item">
+          <span><a href="https://lawi-sookmyung.github.io/unification-program/" target="_blank" style="color: inherit; text-decoration: none;">통일교육사업단</a></span>
+        </div>
       </nav>
 
       <!-- Utility Links -->
@@ -1499,14 +1507,14 @@
           </svg>
         </div>
 
-        <a href="/cdn-cgi/l/email-protection#c2aea3b5ab82b1adada9afbbb7aca5eca3a1eca9b0" class="util-link" title="EMAIL">
+        <a href="mailto:lawi@sookmyung.ac.kr" class="util-link" title="EMAIL">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
             <polyline points="22,6 12,13 2,6"/>
           </svg>
         </a>
 
-        <a href="http://www.sookmyung.ac.kr/" target="_blank" class="util-link sookmyung">
+        <a href="https://www.sookmyung.ac.kr/" target="_blank" class="util-link sookmyung">
           <span>숙명여대</span>
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"/>
@@ -1556,6 +1564,11 @@
         <a onclick="navigateTo('freeboard'); toggleMobileMenu();">자유게시판</a>
         <a onclick="navigateTo('archive'); toggleMobileMenu();">자료실</a>
       </div>
+
+      <div class="mobile-menu-section">
+        <a href="https://lawi-sookmyung.github.io/legal-clinic/" target="_blank" style="font-weight: 600; color: #1e40af;">리걸클리닉 ↗</a>
+        <a href="https://lawi-sookmyung.github.io/unification-program/" target="_blank" style="font-weight: 600; color: #1e40af;">통일교육사업단 ↗</a>
+      </div>
     </div>
   </header>
 
@@ -1594,8 +1607,8 @@
       <div class="footer-right">
         <div class="footer-links">
           <a href="https://www.sookmyung.ac.kr/kr/information-use/privacy-policy.do" target="_blank" class="footer-link privacy">개인정보처리방침</a>
-          <a href="#" class="footer-link">이메일무단수집거부</a>
-          <a href="http://www.sookmyung.ac.kr/contents/contents.jsp?cmsCd=CM0230" target="_blank" class="footer-link">숙명보안10계명</a>
+          <a href="https://www.sookmyung.ac.kr/sookmyungkr/1300/subview.do" target="_blank" class="footer-link">이메일무단수집거부</a>
+          <a href="https://www.sookmyung.ac.kr/sookmyungkr/1252/subview.do" target="_blank" class="footer-link">숙명보안10계명</a>
         </div>
       </div>
     </div>
@@ -1782,14 +1795,14 @@
                 <h3 class="intro-title">IT 서비스</h3>
                 <p class="intro-desc">숙명여대에서 제공하는 IT 서비스입니다.</p>
                 <div class="it-service-links">
-                  <a href="http://ccmail.sookmyung.ac.kr/" target="_blank" class="it-service-link">
+                  <a href="https://mail.google.com/a/sookmyung.ac.kr" target="_blank" class="it-service-link">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                       <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
                       <polyline points="22,6 12,13 2,6"/>
                     </svg>
                     웹메일
                   </a>
-                  <a href="http://portal.sookmyung.ac.kr/" target="_blank" class="it-service-link">
+                  <a href="https://portal.sookmyung.ac.kr/" target="_blank" class="it-service-link">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                       <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
                       <line x1="3" y1="9" x2="21" y2="9"/>
@@ -1826,7 +1839,7 @@
 
           <!-- Quick Links -->
           <div class="quick-links">
-            <a href="http://admission.sookmyung.ac.kr/" target="_blank" class="quick-link">
+            <a href="https://admission.sookmyung.ac.kr/" target="_blank" class="quick-link">
               <div class="quick-link-icon">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M22 10v6M2 10l10-5 10 5-10 5z"/>
@@ -1836,7 +1849,7 @@
               <span class="quick-link-text">입학정보</span>
             </a>
 
-            <a href="http://exchange.sookmyung.ac.kr/" target="_blank" class="quick-link">
+            <a href="https://exchange.sookmyung.ac.kr/" target="_blank" class="quick-link">
               <div class="quick-link-icon">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <circle cx="12" cy="12" r="10"/>
@@ -1847,7 +1860,7 @@
               <span class="quick-link-text">국제교류팀</span>
             </a>
 
-            <a href="http://lib.sookmyung.ac.kr/" target="_blank" class="quick-link">
+            <a href="https://lib.sookmyung.ac.kr/" target="_blank" class="quick-link">
               <div class="quick-link-icon">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
@@ -1869,7 +1882,7 @@
               <span class="quick-link-text">학사지원팀</span>
             </a>
 
-            <a href="http://onestop.sookmyung.ac.kr/" target="_blank" class="quick-link">
+            <a href="https://onestop.sookmyung.ac.kr/" target="_blank" class="quick-link">
               <div class="quick-link-icon">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <line x1="12" y1="1" x2="12" y2="23"/>
@@ -1879,7 +1892,7 @@
               <span class="quick-link-text">장학팀</span>
             </a>
 
-            <a href="http://welfare.sookmyung.ac.kr/" target="_blank" class="quick-link">
+            <a href="https://welfare.sookmyung.ac.kr/" target="_blank" class="quick-link">
               <div class="quick-link-icon">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                   <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
@@ -3831,7 +3844,7 @@
                   『청파법학』에 논문을 투고하시려는 분은 아래 버튼을 클릭하여<br>
                   논문게재신청서를 다운로드 받아 작성 후 제출해 주시기 바랍니다.
                 </p>
-                <a href="/wiz/user/lawlab/download/treatise_appli.hwp" style="display: inline-flex; align-items: center; gap: 10px; padding: 14px 32px; background: linear-gradient(135deg, #1e40af, #3b82f6); color: white; text-decoration: none; border-radius: 12px; font-size: 15px; font-weight: 600; box-shadow: 0 4px 15px rgba(30, 64, 175, 0.3);">
+                <a href="https://lawi.sookmyung.ac.kr/wiz/user/lawlab/download/treatise_appli.hwp" style="display: inline-flex; align-items: center; gap: 10px; padding: 14px 32px; background: linear-gradient(135deg, #1e40af, #3b82f6); color: white; text-decoration: none; border-radius: 12px; font-size: 15px; font-weight: 600; box-shadow: 0 4px 15px rgba(30, 64, 175, 0.3);">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 20px; height: 20px;">
                     <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
                     <polyline points="7 10 12 15 17 10"/>
